[package]
name = "rust-youtube-stats-proxy"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "0.7.19"
reqwest = "0.9.17"
serde = "1.0.91"
serde_json = "1.0.39"